--- a/client/components/main.css
+++ b/client/components/main.css
@@ -14,6 +14,12 @@ body {
   padding: 15px;
   margin-bottom: 15px;
 }
+
+.navbar-brand {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
