--- a/client/components/qualifiers/qualifiers.css
+++ b/client/components/qualifiers/qualifiers.css
@@ -89,3 +89,13 @@
   text-align: justify;
   margin-top: 12px;
 }
+
+table {
+  background-color: #FFFFFF;
+  text-align: center;
+  margin-top:15px;
+}
+
+.qualified {
+  background-color: #f2dede !important;
+}
