--- a/client/components/groupStage/groupStage.css
+++ b/client/components/groupStage/groupStage.css
@@ -29,6 +29,12 @@
   font-size: 20px;
 }
 
+.confirmVoteModal {
+  color: black;
+  text-align: center;
+  font-size: 20px;
+}
+
 .detailAutor {
   font-size: 32px;
   text-align: center;
