Modal para votar con ambas frases

--- a/client/components/main.css
+++ b/client/components/main.css
@@ -39,6 +39,10 @@ body {
   margin-right: 3px;
 }
 
+.detailContext {
+  text-align: justify;
+}
+
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
