--- a/client/components/bracketStage/bracketStage.css
+++ b/client/components/bracketStage/bracketStage.css
@@ -84,3 +84,9 @@
   border-color: #ac0000; 
   background-color: #ac0000;
 }
+
+.chevron {
+  margin:5px;
+  display: inline-block;
+  cursor: pointer;
+}
