Cambio border color

--- a/client/components/qualifiers/qualifiers.css
+++ b/client/components/qualifiers/qualifiers.css
@@ -24,7 +24,7 @@
   word-break: break-word;
   background: white;
   text-align: center;
-  border-top-color: lightgrey;
+  border-top-color: #d3d3d36e;
   border-top-width: thin;
   border-top-style: solid;
 }
