--- a/client/components/utils/cloak.css
+++ b/client/components/utils/cloak.css
@@ -3,11 +3,12 @@
 }
 
 .cloak {
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   background-color: rgba(255,255,255,0.60);
   width: 100%;
-  height: 100%;
+  height: 1000%;
+  margin-left: -30px !important;
 }
 
 
