--- a/client/components/groupStage/groupStage.css
+++ b/client/components/groupStage/groupStage.css
@@ -34,3 +34,11 @@
   text-align: center;
   font-size: 20px;
 }
+
+.groups {
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px;
+  color: black;
+  margin-bottom: 20px;
+}
