--- a/client/components/groupStage/groupStage.css
+++ b/client/components/groupStage/groupStage.css
@@ -43,14 +43,20 @@
   padding: 10px;
   color: black;
   margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .winningPosition {
   font-size: 20px;
   font-weight: bold;
+  color: black;
 }
 .loosingPosition {
-  font-size: 20px
+  font-size: 20px;
+  color: black;
+  font-weight: normal;
+
 }
 
 .groupList {
