--- a/client/components/home/home.css
+++ b/client/components/home/home.css
@@ -6,3 +6,29 @@
   padding: 20px;
   margin-bottom: 15px;
 }
+
+.newsTitle {
+  display: inline-block;
+}
+
+.newsDate {
+  display: inline-block;
+  font-size: 18px;
+  margin-left: 5px;
+}
+
+.newsText {
+  margin-top: 5px;
+  text-align: justify;
+}
+
+.newsMedia {
+  text-align: center;
+}
+
+.new {
+  border-bottom: solid;
+  border-width: thin;
+  border-color: #25212136;
+  padding: 5px;
+}
