--- a/client/components/home/home.css
+++ b/client/components/home/home.css
@@ -25,8 +25,12 @@
 
 .newsMedia {
   text-align: center;
+  margin-top: 30px;
 }
 
+.decadaLogo {
+  
+}
 .new {
   border-bottom: solid;
   border-width: thin;
