--- a/client/components/qualifiers/qualifiers.css
+++ b/client/components/qualifiers/qualifiers.css
@@ -103,6 +103,10 @@ table {
 }
 
 .qualified {
+  background-color: #dff2de !important;
+}
+
+.fraseDelAnio {
   background-color: #f2dede !important;
 }
 
