--- a/client/components/resultados/resultados.css
+++ b/client/components/resultados/resultados.css
@@ -5,7 +5,7 @@
   margin-top: 1%;
   margin-bottom: 1%;
   padding: 8px;
-  height: 1000px;
+ /* height: 1000px;*/
   text-align: center;
   color: #333;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
