--- a/client/components/resultados/resultados.css
+++ b/client/components/resultados/resultados.css
@@ -39,3 +39,17 @@
   text-align: center;
   font-weight: bold;
 }
+
+.autorMasVotada {
+  color: #ac0000;
+  font-weight: bold;
+  text-align: center;
+  font-size: 14px;
+}
+
+.fraseMasVotada {
+  font-weight: bold;
+  text-align: center;
+  font-size: 14px;
+  
+}
